[gd_scene load_steps=16 format=3 uid="uid://kdctwfs8ofv"]

[ext_resource type="Texture2D" uid="uid://df1nxi4jilt66" path="res://assets/bat.png" id="1"]
[ext_resource type="Texture2D" uid="uid://ctpd8cf1ye5nq" path="res://assets/shadow.png" id="2"]
[ext_resource type="AudioStream" uid="uid://crj4s0m64mkx3" path="res://assets/sfx/bat-hit.ogg" id="3"]
[ext_resource type="Script" path="res://scenes/Bat.gd" id="4"]
[ext_resource type="Shader" path="res://shaders/hitflash.gdshader" id="5"]
[ext_resource type="PackedScene" path="res://scenes/BloodSplatter/BloodSplatter.tscn" id="6"]

[sub_resource type="ShaderMaterial" id="3"]
resource_local_to_scene = true
shader = ExtResource("5")
shader_parameter/flash = false

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_param/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="1"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vd5ev"]
_data = {
"RESET": SubResource("4"),
"float": SubResource("1")
}

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_param/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="6"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_param/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mbq7w"]
_data = {
"RESET": SubResource("5"),
"flash": SubResource("6")
}

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(3.02197, 1.52413)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xbm8j"]
resource_local_to_scene = true
spread = 15.0
gravity = Vector3(0, 50, 0)

[node name="Bat" type="Node2D"]
script = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("3")
texture = ExtResource("1")
centered = false
offset = Vector2(0, -1.63528)
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_vd5ev")
}

[node name="HitFlash" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_mbq7w")
}

[node name="Sprite2" type="Sprite2D" parent="."]
position = Vector2(3.5, 4)
scale = Vector2(0.591181, 1)
texture = ExtResource("2")

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(3.5149, 3.94454)
shape = SubResource("7")

[node name="BloodSplatter" parent="." instance=ExtResource("6")]
process_material = SubResource("ParticleProcessMaterial_xbm8j")

[connection signal="animation_finished" from="Sprite2D/HitFlash" to="." method="_on_HitFlash_animation_finished"]
[connection signal="finished" from="HitSfx" to="." method="_on_HitSfx_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
